cmake_minimum_required(VERSION 3.10)

project(06_variables_and_constants)

add_executable(multiplication multiplication.cpp)
add_executable(employee employee.cpp)
add_executable(long_char long_char.cpp)
add_executable(sizeof sizeof.cpp)
add_executable(carpet_cleaning_service carpet_cleaning_service.cpp)
