cmake_minimum_required(VERSION 3.10)

project(06_variables_and_constants)

add_executable(multiplication src/multiplication.cpp)
add_executable(employee src/employee.cpp)
add_executable(long_char src/long_char.cpp)
add_executable(sizeof src/sizeof.cpp)
add_executable(carpet_cleaning_service src/carpet_cleaning_service.cpp)
