cmake_minimum_required(VERSION 3.10)

project(06_variables_and_constants)

add_executable(00_multiplication src/00_multiplication.cpp)
add_executable(01_employee src/01_employee.cpp)
add_executable(02_long_char src/02_long_char.cpp)
add_executable(03_sizeof src/03_sizeof.cpp)
add_executable(04_carpet_cleaning_service src/04_carpet_cleaning_service.cpp)
