
cmake_minimum_required(VERSION 3.10)

project(08_statements_and_operators)

add_executable(arithmetic_operators src/arithmetic_operators.cpp)
add_executable(increment_decrement src/increment_decrement.cpp)
add_executable(mixed_expressions src/mixed_expressions.cpp)
add_executable(testing_equality src/testing_equality.cpp)
add_executable(relational_operators src/relational_operators.cpp)
add_executable(logical_operators src/logical_operators.cpp)
add_executable(section_challenge src/section_challenge.cpp)