cmake_minimum_required(VERSION 3.10)

project(13_classes_and_objects)

include_directories(include)

add_executable(00_declare_class_and_objects src/00_declare_class_and_objects.cpp)
add_executable(01_accessing_class_members src/01_accessing_class_members.cpp)
add_executable(02_access_modifiers src/02_access_modifiers.cpp)
add_executable(03_implementing_methods src/03_implementing_methods.cpp)
add_executable(04_implementing_methods2 src/04_main.cpp src/04_account.cpp)
add_executable(05_constructors_and_deconstructors src/05_constructors_and_deconstructors.cpp)
add_executable(06_default_constructor src/06_default_constructor.cpp)
add_executable(07_construction_initialization src/07_construction_initialization.cpp)
add_executable(08_delegating_constructor src/08_delegating_constructor.cpp)
add_executable(09_default_constructor_parameters src/09_default_constructor_parameters.cpp)
add_executable(10_copy_constructor src/10_copy_constructor.cpp)
add_executable(11_shallow_copy src/11_shallow_copy.cpp)
add_executable(12_deep_copy src/12_deep_copy.cpp)
add_executable(13_move_constructor src/13_move_constructor.cpp)
add_executable(14_using_const_with_classes src/14_using_const_with_classes.cpp)
add_executable(15_static_class_members src/15_main.cpp src/15_static_class_members.cpp)
add_executable(16_struct.cpp src/16_struct.cpp)
add_executable(17_section_challenge src/17_section_challenge_main.cpp src/17_movies.cpp src/17_movie.cpp)