cmake_minimum_required(VERSION 3.10)

project(xx_interview_preparation)

include_directories(include)

add_executable(00_pointer_intro src/00_pointer_intro.cpp)
add_executable(01_pass_by_ref_val_point src/01_pass_by_ref_val_point.cpp)
add_executable(02_stack_vs_heap src/02_stack_vs_heap.cpp)
add_executable(03_vector_example src/03_vector_example.cpp)
add_executable(04_smart_pointers_unique src/04_smart_pointers_unique.cpp)
add_executable(05_smart_pointers_shared src/05_smart_pointers_shared.cpp)
add_executable(06_for_while_loop src/06_for_while_loop.cpp)
add_executable(07_class_deep_copy_constructor src/07_class_deep_copy_constructor.cpp)
add_executable(08_shallow_copy src/08_shallow_copy.cpp)
add_executable(09_deep_copy src/09_deep_copy.cpp)
add_executable(10_pointers_recap src/10_pointers_recap.cpp)
add_executable(11_thread_join src/11_thread_join.cpp)
add_executable(12_thread_detach src/12_thread_detach.cpp)
add_executable(13_thread_mutex src/13_thread_mutex.cpp)
add_executable(14_this_pointer src/14_this_pointer.cpp)
add_executable(15_lambda_expressions src/15_lambda_expressions.cpp)