
cmake_minimum_required(VERSION 3.10)

project(08_statements_and_operators)

add_executable(00_arithmetic_operators src/00_arithmetic_operators.cpp)
add_executable(01_increment_decrement src/01_increment_decrement.cpp)
add_executable(02_mixed_expressions src/02_mixed_expressions.cpp)
add_executable(03_testing_equality src/03_testing_equality.cpp)
add_executable(04_relational_operators src/04_relational_operators.cpp)
add_executable(05_logical_operators src/05_logical_operators.cpp)
add_executable(06_section_challenge src/06_section_challenge.cpp)