cmake_minimum_required(VERSION 3.10)

project(12_pointers_and_references)

add_executable(00_simple_pointers src/00_simple_pointers.cpp)
add_executable(01_dereferencing src/01_dereferencing.cpp)
add_executable(02_dynamic_memory src/02_dynamic_memory.cpp)
add_executable(03_pointer_arithmetic src/03_pointer_arithmetic.cpp)
add_executable(04_passing_pointers src/04_passing_pointers.cpp)
add_executable(05_passing_pointers2 src/05_passing_pointers2.cpp)
add_executable(06_references src/06_references.cpp)
add_executable(07_section_challenge_customsol src/07_section_challenge_customsol.cpp)